tests/fixtures/negative/owned_hardware_illegal_mint.wrela
// expect: SEM0008: OwnedHardware can only be minted through ownership-transfer authority in phase delegated_hardware
module negative.owned_hardware_illegal_mint

unique class OwnedHardware {}

image Bad {
    transitions { delegated_hardware -> owned_hardware }

    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware {
        return hardware.exit_to_owned_hardware()
    }

    phase owned_hardware(hardware: OwnedHardware) -> never {
        let other = OwnedHardware()
        while true {}
    }
}
